--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -1153,7 +1153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('final_cleaned_cars_data.csv', index=False)"
+    "df.to_csv('Datasets/final_cleaned_cars_data.csv', index=False)"
    ]
   },
   {
