--- a/Model.ipynb
+++ b/Model.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv('final_cleaned_cars_data.csv')"
+    "df = pd.read_csv('Datasets/final_cleaned_cars_data.csv')"
    ]
   },
   {
@@ -1173,7 +1173,7 @@
     "drop_columns = [column for column in df.columns if column not in important_features]\n",
     "df_copy = df.copy()\n",
     "df_copy = df_copy.drop(columns=drop_columns)\n",
-    "df_copy.to_csv('final_cars_data_for_ml.csv', index=False)\n",
+    "df_copy.to_csv('Datasets/final_cars_data_for_ml.csv', index=False)\n",
     "print(final_columns)"
    ]
   },
@@ -1369,7 +1369,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('final_cars_data_for_ml.csv')\n",
+    "df = pd.read_csv('Datasets/final_cars_data_for_ml.csv')\n",
     "df.head()"
    ]
   },
